kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  labels:
    app: fastapi-app
spec:
  replicas: 1  # Number of pod replicas
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
        - name: fastapi-app
          image: backend-app:1.0 # Change to your actual image name
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          imagePullPolicy: Never  # Use "Always" if pulling from a registry
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 8001        # External port
      targetPort: 8000  # Port inside the pod
  type: ClusterIP  # Change to NodePort if you want external access
