kubernetes/react-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: react-app:3.0
        imagePullPolicy: Never # Moved to container level
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        volumeMounts:
        - name: work
          subPath: env.js
          mountPath: /usr/share/nginx/html/uir/env.js
          readOnly: false
      volumes: 
      - name: work
        configMap:
            name: react-app-config
      
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: restaurant-service
# spec:
#   type: NodePort
#   selector:
#     app: react-app
#   ports:
#   - protocol: TCP
#     port: 9000
#     targetPort: 9000
#     nodePort: 30000  # Choose a port between 30000-32767
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: ClusterIP
  selector:
    app: react-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
