kubernetes/restaurant-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-app
  template:
    metadata:
      labels:
        app: restaurant-app
    spec:
      containers:
      - name: restaurant-app
        image: ui-app:3.0
        imagePullPolicy: Never # Moved to container level
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: restaurant-service
# spec:
#   type: NodePort
#   selector:
#     app: restaurant-app
#   ports:
#   - protocol: TCP
#     port: 9000
#     targetPort: 9000
#     nodePort: 30000  # Choose a port between 30000-32767
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  type: NodePort
  selector:
    app: restaurant-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
