kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  rules:
    - host: tenant1.abc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service-app
                port:
                  number: 80
    - host: tenant2.abc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service-app
                port:
                  number: 80
    - host: keycloak.abc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
    - host: remote.abc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: remote-ui-service
                port:
                  number: 8000
